[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-card-points-mm"
version = "0.1.0"
description = "Market maker for credit card points (simulation + controller)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
market-maker = "src.market_maker.__main__:main"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
